feat: integrate GPT-4o mini for intelligent conversation handling
- Add AI module with OpenAI GPT-4o mini integration
- Implement automatic reply generation based on customer messages
- Add conversation history tracking (last 10 messages)
- Support multi-language responses (Arabic, French, English)
- Include order context in AI prompts (order ID, amount, wilaya, status)
- Add sendTextMessage method for non-template WhatsApp messages
- Update webhook handler to automatically generate and send AI replies
- Add comprehensive AI integration documentation
- Create test script for AI conversation testing
- Configure system prompts for customer service context

AI Features:
- Context-aware responses with order details
- Conversation history for continuity
- Professional tone with concise replies (2-3 sentences)
- Automatic language detection and response
- Escalation of complex issues to human agents
- Cost-effective with GPT-4o mini (~$0.15 per 1000 conversations)

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^4.1.0",
     "eventemitter2": "^6.4.9",
     "ioredis": "^5.8.2",
+    "openai": "^6.9.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
