feat: add YouCan OAuth + webhook integration

--- a/example.env
+++ b/example.env
@@ -24,3 +24,7 @@ ENCRYPTION_KEY=random_test_token_1234567890abcdef
 # OpenAI (for GPT-4o mini)
 OPENAI_API_KEY=
 
+# YouCan
+YOUCAN_CLIENT_ID=
+YOUCAN_CLIENT_SECRET=
+
